--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-native-community/eslint-config": "^3.0.1",
     "babel-jest": "^27.2.1",
     "eslint": "^7.32.0",
+    "gh-pages": "^3.2.3",
     "jest": "^27.2.1",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-svg-transformer": "^0.14.3",
