--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://isalskuy.github.io/StarbucksClone",
   "name": "StarbucksClone",
   "version": "0.0.1",
   "private": true,
@@ -7,7 +8,10 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d deploy",
+    "build": "react-scripts build"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
