--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://isalskuy.github.io/StarbucksClone",
   "name": "StarbucksClone",
   "version": "0.0.1",
   "private": true,
@@ -8,10 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d deploy",
-    "build": "react-scripts build"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
@@ -32,7 +28,6 @@
     "@react-native-community/eslint-config": "^3.0.1",
     "babel-jest": "^27.2.1",
     "eslint": "^7.32.0",
-    "gh-pages": "^3.2.3",
     "jest": "^27.2.1",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-svg-transformer": "^0.14.3",
